lact-daemon/src/tests/snapshots/lact_daemon__tests__amd__rx7900xtx.snap
---
source: lact-daemon/src/tests/mod.rs
expression: device_info
---
{
  "clocks_info": {
    "max_mclk": 1250,
    "max_sclk": 2735,
    "table": {
      "type": "amd",
      "value": {
        "data": {
          "current_mclk_range": {
            "max": 1250,
            "min": 97
          },
          "current_sclk_range": {
            "max": 2735,
            "min": 500
          },
          "od_range": {
            "curve_sclk_points": [],
            "curve_voltage_points": [],
            "mclk": {
              "max": 1500,
              "min": 97
            },
            "sclk": {
              "max": 5000,
              "min": 500
            },
            "sclk_offset": null,
            "voltage_offset": {
              "max": 0,
              "min": -450
            }
          },
          "sclk_offset": null,
          "vddc_curve": [],
          "voltage_offset": 0
        },
        "kind": "rdna"
      }
    }
  },
  "info": {
    "driver": "amdgpu",
    "drm_info": {
      "amd_ip_info": [
        {
          "count": 1,
          "ip_type": "GFX",
          "queues": 1,
          "version_major": 11,
          "version_minor": 0
        },
        {
          "count": 1,
          "ip_type": "COMPUTE",
          "queues": 4,
          "version_major": 11,
          "version_minor": 0
        },
        {
          "count": 2,
          "ip_type": "DMA",
          "queues": 2,
          "version_major": 6,
          "version_minor": 0
        },
        {
          "count": 2,
          "ip_type": "VCN_DEC",
          "queues": 0,
          "version_major": 4,
          "version_minor": 0
        },
        {
          "count": 2,
          "ip_type": "VCN_ENC",
          "queues": 1,
          "version_major": 4,
          "version_minor": 0
        },
        {
          "count": 1,
          "ip_type": "VCN_JPEG",
          "queues": 1,
          "version_major": 4,
          "version_minor": 0
        }
      ],
      "asic_name": "GFX1100/Navi31",
      "chip_class": "GFX11",
      "compute_units": 96,
      "device_name": "AMD Radeon RX 7900 XTX",
      "family_id": 145,
      "family_name": "GC 11.0.0",
      "isa": "gfx1100",
      "memory_info": {
        "cpu_accessible_total": 25753026560,
        "cpu_accessible_used": 679034880,
        "resizeable_bar": true
      },
      "pci_revision_id": 200,
      "rop_info": {
        "operations_count": 192,
        "operations_factor": 8,
        "unit_count": 24
      },
      "vram_bit_width": 384,
      "vram_clock_ratio": 2.0,
      "vram_max_bw": "959",
      "vram_type": "GDDR6",
      "vram_vendor": "samsung"
    },
    "flags": [
      "DumpableVBios",
      "HasPmfw",
      "ConfigurableFanControl"
    ],
    "link_info": {
      "current_speed": "16.0 GT/s PCIe",
      "current_width": "16"
    },
    "pci_info": {
      "device_pci_info": {
        "model": "Navi 31 [Radeon RX 7900 XT/7900 XTX/7900 GRE/7900M]",
        "model_id": "744C",
        "vendor": "Advanced Micro Devices, Inc. [AMD/ATI]",
        "vendor_id": "1002"
      },
      "subsystem_pci_info": {
        "model": "Sapphire Nitro+ RX 7900 XTX Vapor-X",
        "model_id": "E471",
        "vendor": "Sapphire Technology Limited",
        "vendor_id": "1DA2"
      }
    },
    "vbios_version": "113-D70401XT-N11",
    "vulkan_instances": []
  },
  "pci_info": {
    "device_pci_info": {
      "model": "Navi 31 [Radeon RX 7900 XT/7900 XTX/7900 GRE/7900M]",
      "model_id": "744C",
      "vendor": "Advanced Micro Devices, Inc. [AMD/ATI]",
      "vendor_id": "1002"
    },
    "subsystem_pci_info": {
      "model": "Sapphire Nitro+ RX 7900 XTX Vapor-X",
      "model_id": "E471",
      "vendor": "Sapphire Technology Limited",
      "vendor_id": "1DA2"
    }
  },
  "power_profile_modes": {
    "active": 0,
    "modes": {
      "0": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              1,
              0,
              4,
              800,
              4587520,
              -65536,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              1,
              0,
              3276800,
              -65536,
              -6553
            ]
          }
        ],
        "name": "BOOTUP_DEFAULT"
      },
      "1": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              0,
              1200,
              4,
              650,
              3932160,
              -3276,
              -65536
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              3,
              0,
              1310720,
              -6553,
              -6553
            ]
          }
        ],
        "name": "3D_FULL_SCREEN"
      },
      "2": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              1,
              0,
              3,
              0,
              5898240,
              -65536,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              1,
              0,
              1,
              0,
              3407872,
              -65536,
              -6553
            ]
          }
        ],
        "name": "POWER_SAVING"
      },
      "3": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              1,
              0,
              4,
              500,
              4587520,
              -65536,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              3,
              0,
              3473408,
              -65536,
              -6553
            ]
          }
        ],
        "name": "VIDEO"
      },
      "4": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              2,
              1000,
              1,
              0,
              3276800,
              0,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              3,
              0,
              1310720,
              -6553,
              -6553
            ]
          }
        ],
        "name": "VR"
      },
      "5": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              2,
              1000,
              1,
              0,
              3932160,
              0,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              3,
              0,
              1310720,
              -6553,
              -6553
            ]
          }
        ],
        "name": "COMPUTE"
      },
      "6": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              0,
              1200,
              4,
              0,
              655360,
              -3276,
              -65536
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              3,
              0,
              1310720,
              -6553,
              -6553
            ]
          }
        ],
        "name": "CUSTOM"
      },
      "7": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              0,
              1200,
              4,
              650,
              3932160,
              -3276,
              -65536
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              3,
              0,
              1310720,
              -6553,
              -6553
            ]
          }
        ],
        "name": "WINDOW_3D"
      }
    },
    "value_names": [
      "FPS",
      "MinActiveFreqType",
      "MinActiveFreq",
      "BoosterFreqType",
      "BoosterFreq",
      "PD_Data_limit_c",
      "PD_Data_error_coeff",
      "PD_Data_error_rate_coeff"
    ]
  },
  "power_states": {
    "core": [
      {
        "enabled": true,
        "id": {
          "Index": 0
        },
        "value": 500
      },
      {
        "enabled": true,
        "id": {
          "Index": 1
        },
        "value": 31
      },
      {
        "enabled": true,
        "id": {
          "Index": 2
        },
        "value": 2219
      }
    ],
    "vram": [
      {
        "enabled": true,
        "id": {
          "Index": 0
        },
        "value": 96
      },
      {
        "enabled": true,
        "id": {
          "Index": 1
        },
        "value": 456
      },
      {
        "enabled": true,
        "id": {
          "Index": 2
        },
        "value": 772
      },
      {
        "enabled": true,
        "id": {
          "Index": 3
        },
        "value": 1249
      }
    ]
  },
  "stats": {
    "active_power_states": {
      "core": {
        "Index": 1
      },
      "memory": {
        "Index": 3
      }
    },
    "busy_percent": 3,
    "clockspeed": {
      "gpu_clockspeed": 31,
      "sensors": {},
      "vram_clockspeed": 456
    },
    "fan": {
      "control_enabled": false,
      "pmfw_info": {
        "acoustic_limit": {
          "allowed_range": [
            500,
            3200
          ],
          "current": 3200
        },
        "acoustic_target": {
          "allowed_range": [
            500,
            3200
          ],
          "current": 1450
        },
        "minimum_pwm": {
          "allowed_range": [
            15,
            100
          ],
          "current": 15
        },
        "target_temp": {
          "allowed_range": [
            25,
            105
          ],
          "current": 83
        }
      },
      "pwm_current": 0,
      "pwm_max": 254,
      "pwm_min": 38,
      "speed_current": 0,
      "speed_max": 3200,
      "speed_min": 0,
      "temperature_range": [
        25,
        100
      ]
    },
    "performance_level": "auto",
    "power": {
      "average": 68.0,
      "cap_current": 290.0,
      "cap_default": 290.0,
      "cap_max": 333.0,
      "cap_min": 261.0
    },
    "temps": {
      "edge": {
        "crit": 100.0,
        "crit_hyst": -273.1499938964844,
        "current": 53.0,
        "display_only": false,
        "primary": true
      },
      "junction": {
        "crit": 110.0,
        "crit_hyst": -273.1499938964844,
        "current": 61.0,
        "display_only": false,
        "primary": true
      },
      "mem": {
        "crit": 108.0,
        "crit_hyst": -273.1499938964844,
        "current": 68.0,
        "display_only": false,
        "primary": true
      }
    },
    "voltage": {
      "gpu": 686,
      "sensors": {}
    },
    "vram": {}
  }
}
