lact-daemon/src/tests/snapshots/lact_daemon__tests__amd__rx9070.snap
---
source: lact-daemon/src/tests/mod.rs
expression: device_info
---
{
  "clocks_info": {
    "max_mclk": 1259,
    "table": {
      "type": "amd",
      "value": {
        "data": {
          "current_mclk_range": {
            "max": 1259,
            "min": 97
          },
          "current_sclk_range": {
            "max": null,
            "min": null
          },
          "od_range": {
            "curve_sclk_points": [],
            "curve_voltage_points": [],
            "mclk": {
              "max": 1500,
              "min": 97
            },
            "sclk": null,
            "sclk_offset": {
              "max": 1000,
              "min": -500
            },
            "voltage_offset": {
              "max": 0,
              "min": -200
            }
          },
          "sclk_offset": 0,
          "vddc_curve": [],
          "voltage_offset": 0
        },
        "kind": "rdna"
      }
    }
  },
  "info": {
    "driver": "amdgpu",
    "drm_info": {
      "vram_clock_ratio": 1.0
    },
    "flags": [
      "DumpableVBios",
      "ConfigurableFanControl"
    ],
    "link_info": {
      "current_speed": "32.0 GT/s PCIe",
      "current_width": "16"
    },
    "pci_info": {
      "device_pci_info": {
        "model": "Navi 48 [Radeon RX 9070/9070 XT/9070 GRE]",
        "model_id": "7550",
        "vendor": "Advanced Micro Devices, Inc. [AMD/ATI]",
        "vendor_id": "1002"
      },
      "subsystem_pci_info": {
        "model": "Sapphire Pulse RX 9070",
        "model_id": "2490",
        "vendor": "Sapphire Technology Limited",
        "vendor_id": "1DA2"
      }
    },
    "vbios_version": "113-2E490TX-US2",
    "vulkan_instances": []
  },
  "pci_info": {
    "device_pci_info": {
      "model": "Navi 48 [Radeon RX 9070/9070 XT/9070 GRE]",
      "model_id": "7550",
      "vendor": "Advanced Micro Devices, Inc. [AMD/ATI]",
      "vendor_id": "1002"
    },
    "subsystem_pci_info": {
      "model": "Sapphire Pulse RX 9070",
      "model_id": "2490",
      "vendor": "Sapphire Technology Limited",
      "vendor_id": "1DA2"
    }
  },
  "power_profile_modes": {
    "active": 1,
    "modes": {
      "0": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              1,
              0,
              4,
              800,
              4587520,
              -65536,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              1,
              0,
              5898240,
              -6553,
              -6553
            ]
          }
        ],
        "name": "BOOTUP_DEFAULT"
      },
      "1": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              1,
              0,
              1,
              0,
              5570560,
              -655,
              -6553
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              1,
              0,
              1,
              0,
              5898240,
              -6553,
              -6553
            ]
          }
        ],
        "name": "3D_FULL_SCREEN"
      },
      "2": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              1,
              0,
              3,
              0,
              5898240,
              -65536,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              1,
              0,
              1,
              0,
              5898240,
              -65536,
              -6553
            ]
          }
        ],
        "name": "POWER_SAVING"
      },
      "3": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              1,
              0,
              4,
              500,
              4587520,
              -65536,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              1,
              0,
              1,
              0,
              5898240,
              -6553,
              -6553
            ]
          }
        ],
        "name": "VIDEO"
      },
      "4": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              4,
              600,
              1,
              0,
              4587520,
              -16384,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              1,
              0,
              1,
              0,
              5898240,
              -6553,
              -6553
            ]
          }
        ],
        "name": "VR"
      },
      "5": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              4,
              600,
              1,
              0,
              4587520,
              -16384,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              1,
              0,
              1,
              0,
              5898240,
              -6553,
              -6553
            ]
          }
        ],
        "name": "COMPUTE"
      },
      "6": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              1,
              0,
              4,
              800,
              4587520,
              -65536,
              0
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              1,
              0,
              5898240,
              -6553,
              -6553
            ]
          }
        ],
        "name": "CUSTOM"
      },
      "7": {
        "components": [
          {
            "clock_type": "GFXCLK",
            "values": [
              0,
              1,
              0,
              1,
              0,
              5570560,
              -655,
              -6553
            ]
          },
          {
            "clock_type": "FCLK",
            "values": [
              0,
              3,
              0,
              1,
              0,
              5898240,
              -6553,
              -6553
            ]
          }
        ],
        "name": "WINDOW_3D"
      }
    },
    "value_names": [
      "FPS",
      "MinActiveFreqType",
      "MinActiveFreq",
      "BoosterFreqType",
      "BoosterFreq",
      "PD_Data_limit_c",
      "PD_Data_error_coeff",
      "PD_Data_error_rate_coeff"
    ]
  },
  "power_states": {
    "core": [
      {
        "enabled": true,
        "id": "Sleep",
        "value": 500
      },
      {
        "enabled": true,
        "id": {
          "Index": 0
        },
        "value": 789
      },
      {
        "enabled": true,
        "id": {
          "Index": 1
        },
        "value": 2070
      }
    ],
    "vram": [
      {
        "enabled": true,
        "id": {
          "Index": 0
        },
        "value": 96
      },
      {
        "enabled": true,
        "id": {
          "Index": 1
        },
        "value": 456
      },
      {
        "enabled": true,
        "id": {
          "Index": 2
        },
        "value": 772
      },
      {
        "enabled": true,
        "id": {
          "Index": 3
        },
        "value": 875
      },
      {
        "enabled": true,
        "id": {
          "Index": 4
        },
        "value": 1124
      },
      {
        "enabled": true,
        "id": {
          "Index": 5
        },
        "value": 1258
      }
    ]
  },
  "stats": {
    "active_power_states": {
      "core": {
        "Index": 0
      },
      "memory": {
        "Index": 4
      },
      "pcie": {
        "Index": 1
      }
    },
    "busy_percent": 25,
    "clockspeed": {
      "gpu_clockspeed": 900,
      "sensors": {
        "DCLK": 25,
        "DCLK1": 25,
        "SOCCLK": 1200,
        "UCLK": 1124,
        "VCLK": 25,
        "VCLK1": 25
      },
      "target_gpu_clockspeed": 900,
      "vram_clockspeed": 1124
    },
    "fan": {
      "control_enabled": false,
      "pmfw_info": {
        "acoustic_limit": {
          "allowed_range": [
            500,
            6000
          ],
          "current": 6000
        },
        "acoustic_target": {
          "allowed_range": [
            500,
            6000
          ],
          "current": 1700
        },
        "minimum_pwm": {
          "allowed_range": [
            15,
            100
          ],
          "current": 15
        },
        "target_temp": {
          "allowed_range": [
            25,
            105
          ],
          "current": 70
        },
        "zero_rpm_enable": true
      },
      "pwm_current": 117,
      "pwm_max": 254,
      "pwm_min": 38,
      "speed_current": 1944,
      "speed_max": 6000,
      "speed_min": 0,
      "temperature_range": [
        25,
        100
      ]
    },
    "performance_level": "manual",
    "power": {
      "average": 49.0,
      "cap_current": 200.0,
      "cap_default": 220.0,
      "cap_max": 245.0,
      "cap_min": 0.0
    },
    "temps": {
      "edge": {
        "crit": 110.0,
        "crit_hyst": -273.1499938964844,
        "current": 48.0,
        "display_only": false,
        "primary": true
      },
      "junction": {
        "crit": 110.0,
        "crit_hyst": -273.1499938964844,
        "current": 52.0,
        "display_only": false,
        "primary": true
      },
      "mem": {
        "crit": 108.0,
        "crit_hyst": -273.1499938964844,
        "current": 72.0,
        "display_only": false,
        "primary": true
      },
      "vrgfx": {
        "crit": null,
        "crit_hyst": null,
        "current": 46.0,
        "display_only": true,
        "primary": false
      },
      "vrmem": {
        "crit": null,
        "crit_hyst": null,
        "current": 54.0,
        "display_only": true,
        "primary": false
      },
      "vrsoc": {
        "crit": null,
        "crit_hyst": null,
        "current": 49.0,
        "display_only": true,
        "primary": false
      }
    },
    "throttle_info": {},
    "voltage": {
      "gpu": 790,
      "sensors": {
        "mem": 1345,
        "soc": 842
      }
    },
    "vram": {}
  }
}
